--- a/cinema2/composer.json
+++ b/cinema2/composer.json
@@ -10,7 +10,9 @@
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "5.4.*",
         "laraveles/spanish": "^1.0",
-        "yajra/laravel-oci8": "5.4.*"
+        "yajra/laravel-oci8": "5.4.*",
+        "guzzlehttp/guzzle": "~5.2",
+        "paypal/rest-api-sdk-php": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
